--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "turbo run dev",
-    "build": "turbo build"
+    "build": "turbo build",
+    "start": "node apps/api/dist/main.js"
   },
   "repository": {
     "type": "git",
