--- a/turbo.json
+++ b/turbo.json
@@ -11,6 +11,12 @@
       "outputs": [
         "dist/**"
       ]
+    },
+    "api#dev": {
+      "dependsOn": []
+    },
+    "client#dev": {
+      "dependsOn": []
     }
   }
 }
