--- a/turbo.json
+++ b/turbo.json
@@ -5,18 +5,9 @@
       "cache": false
     },
     "build": {
-      "dependsOn": [
-        "^build"
-      ],
-      "outputs": [
-        "dist/**"
-      ]
+      "dependsOn": ["^build"],
+      "outputs": ["dist/**"]
     },
-    "api#dev": {
-      "dependsOn": []
-    },
-    "client#dev": {
-      "dependsOn": []
-    }
+    "clean:dist": {}
   }
 }
