--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -11,6 +11,8 @@
     "clean:dist": "rm -rf ./dist"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.15",
+    "@tailwindcss/forms": "^0.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
