--- a/apps/client/package.json
+++ b/apps/client/package.json
@@ -14,7 +14,9 @@
     "@headlessui/react": "^1.7.15",
     "@tailwindcss/forms": "^0.5.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-toastify": "^9.1.3",
+    "zustand": "^4.3.9"
   },
   "devDependencies": {
     "@types/react": "^18.2.14",
