--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "dotenv -- turbo build",
     "postbuild": "mv apps/api/dist dist/ && mkdir dist/static && mv apps/client/dist/* dist/static",
     "start": "dotenv -- node dist/main.js",
-    "clean:dist": "turbo run clean:dist && rm -rf dist"
+    "clean:dist": "turbo run clean:dist && rm -rf dist",
+    "cypress": "cypress open"
   },
   "repository": {
     "type": "git",
@@ -25,5 +26,8 @@
   "devDependencies": {
     "dotenv-cli": "^7.2.1",
     "turbo": "^1.10.8"
+  },
+  "dependencies": {
+    "cypress": "^12.17.2"
   }
 }
