added config validation to the api and some new env variables

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,14 @@
+NODE_ENV=development
+
+## Api configuration
+
+# only necesary if you want override default port 3000
+API_PORT= 
+
+
 MONGODB_URI=
+
+## Client configuration
+
+# only necesary if you want override default port 5173
+VITE_CLIENT_PORT= 
