changed env var

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ NODE_ENV=development
 ## Api configuration
 
 # only necesary if you want override default port 3000
-API_PORT= 
+PORT= 
 
 
 MONGODB_URI=
